fix overflow on smaller displays... even more.

--- a/src/app/studies/list/list.component.scss
+++ b/src/app/studies/list/list.component.scss
@@ -1,9 +1,12 @@
 .horizontal-groups {
-    display: flex;
-	flex-wrap: wrap;
+  display: flex;
+  flex-wrap: wrap;
 }
 
-::ng-deep .mat-list .mat-list-item .mat-line{
-    word-wrap: break-word;
-   white-space: pre-wrap;
-}
+.mat-list-item.mat-list-item-word-wrap {
+    height: initial !important;
+    .mat-line {
+      word-wrap: break-word !important; 
+      white-space: pre-wrap !important;
+    }
+  }
